--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "7d9208c4-5bd7-4784-969e-9e82b6e472ce",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,15 @@
       "dtypes: int64(5), object(2)\n",
       "memory usage: 96.0+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'contracts'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -161,6 +170,134 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 442 entries, 0 to 441\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   contract_id         442 non-null    int64 \n",
+      " 1   discount_type_code  442 non-null    object\n",
+      " 2   deal_won            442 non-null    object\n",
+      " 3   user_price_after    442 non-null    int64 \n",
+      " 4   reten_flag          442 non-null    int64 \n",
+      "dtypes: int64(3), object(2)\n",
+      "memory usage: 17.4+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'discounts'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contract_id</th>\n",
+       "      <th>discount_type_code</th>\n",
+       "      <th>deal_won</th>\n",
+       "      <th>user_price_after</th>\n",
+       "      <th>reten_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-01-01 10:45:45.000000 UTC</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-01-04 12:27:39.000000 UTC</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-01-05 10:40:32.000000 UTC</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-01-05 11:38:35.000000 UTC</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-01-07 11:34:42.000000 UTC</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   contract_id discount_type_code                        deal_won  \\\n",
+       "0            4                 D1  2021-01-01 10:45:45.000000 UTC   \n",
+       "1            8                 D1  2021-01-04 12:27:39.000000 UTC   \n",
+       "2           12                 D1  2021-01-05 10:40:32.000000 UTC   \n",
+       "3           14                 D1  2021-01-05 11:38:35.000000 UTC   \n",
+       "4           19                 D1  2021-01-07 11:34:42.000000 UTC   \n",
+       "\n",
+       "   user_price_after  reten_flag  \n",
+       "0             18000           0  \n",
+       "1             18000           0  \n",
+       "2             18000           0  \n",
+       "3             18000           0  \n",
+       "4             18000           0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2 entries, 0 to 1\n",
       "Data columns (total 3 columns):\n",
       " #   Column              Non-Null Count  Dtype \n",
@@ -171,6 +308,15 @@
       "dtypes: object(3)\n",
       "memory usage: 176.0+ bytes\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'discount_types'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -250,6 +396,15 @@
       "dtypes: int64(3), object(2)\n",
       "memory usage: 637.9+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'funnel'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -364,6 +519,15 @@
     },
     {
      "data": {
+      "text/plain": [
+       "'google_analytics'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -467,6 +631,15 @@
     },
     {
      "data": {
+      "text/plain": [
+       "'industries'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -558,6 +731,15 @@
       "dtypes: int64(4), object(1)\n",
       "memory usage: 132.8+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'leads'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -677,6 +859,15 @@
     },
     {
      "data": {
+      "text/plain": [
+       "'session_sources'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -768,6 +959,15 @@
     },
     {
      "data": {
+      "text/plain": [
+       "'stages'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -817,6 +1017,21 @@
        "      <td>108</td>\n",
        "      <td>deal_won</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>104</td>\n",
+       "      <td>approach_success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>102</td>\n",
+       "      <td>leads_qualification</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>101</td>\n",
+       "      <td>leads_registered</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -827,7 +1042,10 @@
        "1       105             discussion_success\n",
        "2       106                     offer_sent\n",
        "3       107             quotation_recieved\n",
-       "4       108                       deal_won"
+       "4       108                       deal_won\n",
+       "5       104               approach_success\n",
+       "6       102            leads_qualification\n",
+       "7       101               leads_registered"
       ]
      },
      "metadata": {},
@@ -847,41 +1065,209 @@
     "#list dataset path and read\n",
     "contracts = \"./contracts.csv\"\n",
     "contracts = pd.read_csv(contracts)\n",
-    "display(contracts.head(),contracts.info())\n",
+    "display(\"contracts\",contracts.head(),contracts.info())\n",
+    "\n",
+    "discounts = \"./discounts.csv\"\n",
+    "discounts = pd.read_csv(discounts)\n",
+    "display(\"discounts\",discounts.head(),discounts.info())\n",
     "\n",
     "discount_types = \"./discount_types.csv\"\n",
     "discount_types = pd.read_csv(discount_types)\n",
-    "display(discount_types.head(),discount_types.info())\n",
+    "display(\"discount_types\",discount_types.head(),discount_types.info())\n",
     "\n",
     "funnel = \"./funnel.csv\"\n",
     "funnel = pd.read_csv(funnel)\n",
-    "display(funnel.head(),funnel.info())\n",
+    "display(\"funnel\",funnel.head(),funnel.info())\n",
     "\n",
     "google_analytics = \"./google_analytics.csv\"\n",
     "google_analytics = pd.read_csv(google_analytics)\n",
-    "display(google_analytics.head(),google_analytics.info())\n",
+    "display(\"google_analytics\",google_analytics.head(),google_analytics.info())\n",
     "\n",
     "industries = \"./industries.csv\"\n",
     "industries = pd.read_csv(industries)\n",
-    "display(industries.head(),industries.info())\n",
+    "display(\"industries\",industries.head(),industries.info())\n",
     "\n",
     "leads = \"./leads.csv\"\n",
     "leads = pd.read_csv(leads)\n",
-    "display(leads.head(),leads.info())\n",
+    "display(\"leads\",leads.head(),leads.info())\n",
     "\n",
     "session_sources = \"./session_sources.csv\"\n",
     "session_sources = pd.read_csv(session_sources)\n",
-    "display(session_sources.head(),session_sources.info())\n",
+    "display(\"session_sources\",session_sources,session_sources.info())\n",
     "\n",
     "stages = \"./stages.csv\"\n",
     "stages = pd.read_csv(stages)\n",
-    "display(stages.head(),stages.info())"
+    "display(\"stages\",stages,stages.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b9725313-bf13-4fa4-9abd-9343cdf50af8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (3139394129.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[41], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    google_analytics[google_analytics[\"leads_id\"]==3338\"]\u001b[0m\n\u001b[1;37m                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "google_analytics[google_analytics[\"leads_id\"]==3338\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "675a6748-d1d3-4950-a14b-af06b7f4a5b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4400025000"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(contracts[\"user_price\"]*contracts[\"number_of_employee\"]).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b55bdac0-55cc-4416-b190-0a76fe85a289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>funnel_id</th>\n",
+       "      <th>leads_id</th>\n",
+       "      <th>stage_id</th>\n",
+       "      <th>TimeStamp</th>\n",
+       "      <th>reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3337</th>\n",
+       "      <td>15894</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2022-11-18 11:47:38.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5958</th>\n",
+       "      <td>15948</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022-11-22 12:18:30.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8198</th>\n",
+       "      <td>15990</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>103</td>\n",
+       "      <td>2022-11-24 10:14:53.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10008</th>\n",
+       "      <td>16033</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>104</td>\n",
+       "      <td>2022-11-25 16:42:52.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11407</th>\n",
+       "      <td>16155</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>105</td>\n",
+       "      <td>2022-12-02 16:31:19.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12516</th>\n",
+       "      <td>16181</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>106</td>\n",
+       "      <td>2022-12-05 16:23:04.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13417</th>\n",
+       "      <td>16252</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>107</td>\n",
+       "      <td>2022-12-12 17:03:46.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14318</th>\n",
+       "      <td>16292</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>108</td>\n",
+       "      <td>2022-12-19 16:59:47.000000 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       funnel_id  leads_id  stage_id                       TimeStamp reason\n",
+       "3337       15894      3338       101  2022-11-18 11:47:38.000000 UTC    NaN\n",
+       "5958       15948      3338       102  2022-11-22 12:18:30.000000 UTC    NaN\n",
+       "8198       15990      3338       103  2022-11-24 10:14:53.000000 UTC    NaN\n",
+       "10008      16033      3338       104  2022-11-25 16:42:52.000000 UTC    NaN\n",
+       "11407      16155      3338       105  2022-12-02 16:31:19.000000 UTC    NaN\n",
+       "12516      16181      3338       106  2022-12-05 16:23:04.000000 UTC    NaN\n",
+       "13417      16252      3338       107  2022-12-12 17:03:46.000000 UTC    NaN\n",
+       "14318      16292      3338       108  2022-12-19 16:59:47.000000 UTC    NaN"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funnel[funnel[\"leads_id\"]==3338]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9725313-bf13-4fa4-9abd-9343cdf50af8",
+   "id": "73ff158e-98ec-41cb-9965-07d94947447d",
    "metadata": {},
    "outputs": [],
    "source": []
