--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -1102,21 +1102,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "b9725313-bf13-4fa4-9abd-9343cdf50af8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 1) (3139394129.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[41], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    google_analytics[google_analytics[\"leads_id\"]==3338\"]\u001b[0m\n\u001b[1;37m                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leads_id</th>\n",
+       "      <th>ga_id</th>\n",
+       "      <th>Page_Name</th>\n",
+       "      <th>Page_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2826</th>\n",
+       "      <td>3338</td>\n",
+       "      <td>11744</td>\n",
+       "      <td>/features</td>\n",
+       "      <td>2022-11-18 11:45:06.000000 UTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5458</th>\n",
+       "      <td>3338</td>\n",
+       "      <td>11743</td>\n",
+       "      <td>/studycase</td>\n",
+       "      <td>2022-11-18 11:44:17.000000 UTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8546</th>\n",
+       "      <td>3338</td>\n",
+       "      <td>11745</td>\n",
+       "      <td>/testimonials</td>\n",
+       "      <td>2022-11-18 11:45:32.000000 UTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10552</th>\n",
+       "      <td>3338</td>\n",
+       "      <td>11746</td>\n",
+       "      <td>/form/publications</td>\n",
+       "      <td>2022-11-18 11:45:53.000000 UTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11916</th>\n",
+       "      <td>3338</td>\n",
+       "      <td>11747</td>\n",
+       "      <td>/form/set-a-meeting</td>\n",
+       "      <td>2022-11-18 11:46:10.000000 UTC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       leads_id  ga_id            Page_Name                  Page_timestamp\n",
+       "2826       3338  11744            /features  2022-11-18 11:45:06.000000 UTC\n",
+       "5458       3338  11743           /studycase  2022-11-18 11:44:17.000000 UTC\n",
+       "8546       3338  11745        /testimonials  2022-11-18 11:45:32.000000 UTC\n",
+       "10552      3338  11746   /form/publications  2022-11-18 11:45:53.000000 UTC\n",
+       "11916      3338  11747  /form/set-a-meeting  2022-11-18 11:46:10.000000 UTC"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "google_analytics[google_analytics[\"leads_id\"]==3338\"]"
+    "google_analytics[google_analytics[\"leads_id\"]==3338]"
    ]
   },
   {
