--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -813,6 +813,127 @@
      "output_type": "stream",
      "text": [
       "\n",
+      " marketing_spends\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 26 entries, 0 to 25\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   Date            26 non-null     object\n",
+      " 1   CPC             26 non-null     object\n",
+      " 2   Direct          26 non-null     object\n",
+      " 3   Organic Search  26 non-null     object\n",
+      " 4   Organic Social  26 non-null     object\n",
+      " 5   Refferal        26 non-null     object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 1.3+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>CPC</th>\n",
+       "      <th>Direct</th>\n",
+       "      <th>Organic Search</th>\n",
+       "      <th>Organic Social</th>\n",
+       "      <th>Refferal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-Dec</td>\n",
+       "      <td>4,000,000</td>\n",
+       "      <td>5,300,000</td>\n",
+       "      <td>3,800,000</td>\n",
+       "      <td>4,000,000</td>\n",
+       "      <td>14,000,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-Nov</td>\n",
+       "      <td>1,000,000</td>\n",
+       "      <td>800,000</td>\n",
+       "      <td>300,000</td>\n",
+       "      <td>500,000</td>\n",
+       "      <td>1,000,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-Apr</td>\n",
+       "      <td>5,000,000</td>\n",
+       "      <td>4,800,000</td>\n",
+       "      <td>3,000,000</td>\n",
+       "      <td>5,500,000</td>\n",
+       "      <td>12,500,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-Aug</td>\n",
+       "      <td>4,000,000</td>\n",
+       "      <td>5,500,000</td>\n",
+       "      <td>3,800,000</td>\n",
+       "      <td>5,000,000</td>\n",
+       "      <td>11,500,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-Dec</td>\n",
+       "      <td>7,000,000</td>\n",
+       "      <td>8,000,000</td>\n",
+       "      <td>9,500,000</td>\n",
+       "      <td>7,800,000</td>\n",
+       "      <td>24,000,000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date        CPC     Direct Organic Search Organic Social    Refferal\n",
+       "0  2020-Dec  4,000,000  5,300,000      3,800,000      4,000,000  14,000,000\n",
+       "1  2020-Nov  1,000,000    800,000        300,000        500,000   1,000,000\n",
+       "2  2021-Apr  5,000,000  4,800,000      3,000,000      5,500,000  12,500,000\n",
+       "3  2021-Aug  4,000,000  5,500,000      3,800,000      5,000,000  11,500,000\n",
+       "4  2021-Dec  7,000,000  8,000,000      9,500,000      7,800,000  24,000,000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       " session_sources\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5 entries, 0 to 4\n",
@@ -993,6 +1114,134 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " survey\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 901 entries, 0 to 900\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                     Non-Null Count  Dtype\n",
+      "---  ------                     --------------  -----\n",
+      " 0   id                         901 non-null    int64\n",
+      " 1   NPS                        901 non-null    int64\n",
+      " 2   Pre-Sales Information      901 non-null    int64\n",
+      " 3   Sales's Product Knowledge  901 non-null    int64\n",
+      " 4   Respon Time                901 non-null    int64\n",
+      " 5   Communication              901 non-null    int64\n",
+      "dtypes: int64(6)\n",
+      "memory usage: 42.4 KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>NPS</th>\n",
+       "      <th>Pre-Sales Information</th>\n",
+       "      <th>Sales's Product Knowledge</th>\n",
+       "      <th>Respon Time</th>\n",
+       "      <th>Communication</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  NPS  Pre-Sales Information  Sales's Product Knowledge  Respon Time  \\\n",
+       "0   1    7                      5                          2            3   \n",
+       "1   2    7                      5                          3            3   \n",
+       "2   3    7                      4                          2            1   \n",
+       "3   4    8                      5                          2            3   \n",
+       "4   5    7                      4                          4            3   \n",
+       "\n",
+       "   Communication  \n",
+       "0              5  \n",
+       "1              5  \n",
+       "2              5  \n",
+       "3              4  \n",
+       "4              2  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1019,27 +1268,6 @@
    "source": [
     "Entity Relational Diagram (ERD)\n",
     "![image.png](attachment:47ed04d0-0a0b-40d9-9f80-1d3f00e17b6b.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "f4f5343c-0d22-4008-be09-7524e0365bd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([20000, 15000, 25000], dtype=int64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contracts[\"user_price\"].unique()"
    ]
   },
   {
@@ -1159,6 +1387,16 @@
    "execution_count": 6,
    "id": "b55bdac0-55cc-4416-b190-0a76fe85a289",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = stages.merge(funnel[funnel[\"reason\"]==\"price not fit\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73ff158e-98ec-41cb-9965-07d94947447d",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1181,107 +1419,199 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>stage_id</th>\n",
+       "      <th>stage</th>\n",
        "      <th>funnel_id</th>\n",
        "      <th>leads_id</th>\n",
-       "      <th>stage_id</th>\n",
        "      <th>TimeStamp</th>\n",
        "      <th>reason</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3337</th>\n",
-       "      <td>15894</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>101</td>\n",
-       "      <td>2022-11-18 11:47:38.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5958</th>\n",
-       "      <td>15948</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>102</td>\n",
-       "      <td>2022-11-22 12:18:30.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8198</th>\n",
-       "      <td>15990</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>103</td>\n",
-       "      <td>2022-11-24 10:14:53.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10008</th>\n",
-       "      <td>16033</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2022-11-25 16:42:52.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11407</th>\n",
-       "      <td>16155</td>\n",
-       "      <td>3338</td>\n",
+       "      <th>0</th>\n",
        "      <td>105</td>\n",
-       "      <td>2022-12-02 16:31:19.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>discussion_success</td>\n",
+       "      <td>149</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2020-12-14 09:32:42.000000 UTC</td>\n",
+       "      <td>price not fit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12516</th>\n",
-       "      <td>16181</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>106</td>\n",
-       "      <td>2022-12-05 16:23:04.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>105</td>\n",
+       "      <td>discussion_success</td>\n",
+       "      <td>219</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2020-12-17 12:02:32.000000 UTC</td>\n",
+       "      <td>price not fit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13417</th>\n",
-       "      <td>16252</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>107</td>\n",
-       "      <td>2022-12-12 17:03:46.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2</th>\n",
+       "      <td>105</td>\n",
+       "      <td>discussion_success</td>\n",
+       "      <td>294</td>\n",
+       "      <td>49</td>\n",
+       "      <td>2020-12-22 16:52:15.000000 UTC</td>\n",
+       "      <td>price not fit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14318</th>\n",
-       "      <td>16292</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>108</td>\n",
-       "      <td>2022-12-19 16:59:47.000000 UTC</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3</th>\n",
+       "      <td>105</td>\n",
+       "      <td>discussion_success</td>\n",
+       "      <td>339</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2020-12-25 11:13:10.000000 UTC</td>\n",
+       "      <td>price not fit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>discussion_success</td>\n",
+       "      <td>351</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2020-12-28 10:25:35.000000 UTC</td>\n",
+       "      <td>price not fit</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       funnel_id  leads_id  stage_id                       TimeStamp reason\n",
-       "3337       15894      3338       101  2022-11-18 11:47:38.000000 UTC    NaN\n",
-       "5958       15948      3338       102  2022-11-22 12:18:30.000000 UTC    NaN\n",
-       "8198       15990      3338       103  2022-11-24 10:14:53.000000 UTC    NaN\n",
-       "10008      16033      3338       104  2022-11-25 16:42:52.000000 UTC    NaN\n",
-       "11407      16155      3338       105  2022-12-02 16:31:19.000000 UTC    NaN\n",
-       "12516      16181      3338       106  2022-12-05 16:23:04.000000 UTC    NaN\n",
-       "13417      16252      3338       107  2022-12-12 17:03:46.000000 UTC    NaN\n",
-       "14318      16292      3338       108  2022-12-19 16:59:47.000000 UTC    NaN"
+       "   stage_id               stage  funnel_id  leads_id  \\\n",
+       "0       105  discussion_success        149        16   \n",
+       "1       105  discussion_success        219        13   \n",
+       "2       105  discussion_success        294        49   \n",
+       "3       105  discussion_success        339        64   \n",
+       "4       105  discussion_success        351        71   \n",
+       "\n",
+       "                        TimeStamp         reason  \n",
+       "0  2020-12-14 09:32:42.000000 UTC  price not fit  \n",
+       "1  2020-12-17 12:02:32.000000 UTC  price not fit  \n",
+       "2  2020-12-22 16:52:15.000000 UTC  price not fit  \n",
+       "3  2020-12-25 11:13:10.000000 UTC  price not fit  \n",
+       "4  2020-12-28 10:25:35.000000 UTC  price not fit  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "funnel[funnel[\"leads_id\"]==3338]"
+    "aa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d9282f60-ef57-4a39-b244-5a43b215214e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stage_id</th>\n",
+       "      <th>funnel_id</th>\n",
+       "      <th>leads_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>382.000</td>\n",
+       "      <td>382.000</td>\n",
+       "      <td>382.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>105.838</td>\n",
+       "      <td>8316.039</td>\n",
+       "      <td>1691.605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.829</td>\n",
+       "      <td>4845.182</td>\n",
+       "      <td>992.954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>105.000</td>\n",
+       "      <td>149.000</td>\n",
+       "      <td>13.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>105.000</td>\n",
+       "      <td>4048.500</td>\n",
+       "      <td>837.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>106.000</td>\n",
+       "      <td>8024.000</td>\n",
+       "      <td>1654.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>107.000</td>\n",
+       "      <td>12448.250</td>\n",
+       "      <td>2558.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>107.000</td>\n",
+       "      <td>16301.000</td>\n",
+       "      <td>3396.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       stage_id  funnel_id  leads_id\n",
+       "count   382.000    382.000   382.000\n",
+       "mean    105.838   8316.039  1691.605\n",
+       "std       0.829   4845.182   992.954\n",
+       "min     105.000    149.000    13.000\n",
+       "25%     105.000   4048.500   837.000\n",
+       "50%     106.000   8024.000  1654.500\n",
+       "75%     107.000  12448.250  2558.750\n",
+       "max     107.000  16301.000  3396.000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ff158e-98ec-41cb-9965-07d94947447d",
+   "id": "f54da0f0-f9f0-4c18-b1f1-63d3369dc301",
    "metadata": {},
    "outputs": [],
    "source": []
