--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -1271,350 +1271,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "181a65f9-d3ab-41f8-b8ed-be4f26db5b02",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Pre-Processing Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b9725313-bf13-4fa4-9abd-9343cdf50af8",
+   "id": "147d2242-0572-4a3e-9ef2-27f84e1064c1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>leads_id</th>\n",
-       "      <th>ga_id</th>\n",
-       "      <th>Page_Name</th>\n",
-       "      <th>Page_timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2826</th>\n",
-       "      <td>3338</td>\n",
-       "      <td>11744</td>\n",
-       "      <td>/features</td>\n",
-       "      <td>2022-11-18 11:45:06.000000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5458</th>\n",
-       "      <td>3338</td>\n",
-       "      <td>11743</td>\n",
-       "      <td>/studycase</td>\n",
-       "      <td>2022-11-18 11:44:17.000000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8546</th>\n",
-       "      <td>3338</td>\n",
-       "      <td>11745</td>\n",
-       "      <td>/testimonials</td>\n",
-       "      <td>2022-11-18 11:45:32.000000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10552</th>\n",
-       "      <td>3338</td>\n",
-       "      <td>11746</td>\n",
-       "      <td>/form/publications</td>\n",
-       "      <td>2022-11-18 11:45:53.000000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11916</th>\n",
-       "      <td>3338</td>\n",
-       "      <td>11747</td>\n",
-       "      <td>/form/set-a-meeting</td>\n",
-       "      <td>2022-11-18 11:46:10.000000 UTC</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       leads_id  ga_id            Page_Name                  Page_timestamp\n",
-       "2826       3338  11744            /features  2022-11-18 11:45:06.000000 UTC\n",
-       "5458       3338  11743           /studycase  2022-11-18 11:44:17.000000 UTC\n",
-       "8546       3338  11745        /testimonials  2022-11-18 11:45:32.000000 UTC\n",
-       "10552      3338  11746   /form/publications  2022-11-18 11:45:53.000000 UTC\n",
-       "11916      3338  11747  /form/set-a-meeting  2022-11-18 11:46:10.000000 UTC"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1754 entries, 0 to 1753\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   contract_id         1754 non-null   int64  \n",
+      " 1   leads_id            1754 non-null   int64  \n",
+      " 2   date                1754 non-null   object \n",
+      " 3   subscription_type   1754 non-null   object \n",
+      " 4   number_of_employee  1754 non-null   int64  \n",
+      " 5   reten_flag_x        1754 non-null   int64  \n",
+      " 6   user_price          1754 non-null   int64  \n",
+      " 7   discount_type_code  442 non-null    object \n",
+      " 8   deal_won            442 non-null    object \n",
+      " 9   user_price_after    442 non-null    float64\n",
+      " 10  reten_flag_y        442 non-null    float64\n",
+      "dtypes: float64(2), int64(5), object(4)\n",
+      "memory usage: 164.4+ KB\n"
+     ]
     }
    ],
    "source": [
-    "google_analytics[google_analytics[\"leads_id\"]==3338]"
+    "new_contracts = contracts.merge(discounts, on='contract_id', how='left')\n",
+    "new_contracts.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "675a6748-d1d3-4950-a14b-af06b7f4a5b2",
+   "id": "502ef38a-e22a-455c-bfe6-f34cebcea63e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4400025000"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 901 entries, 0 to 900\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                     Non-Null Count  Dtype\n",
+      "---  ------                     --------------  -----\n",
+      " 0   id                         901 non-null    int64\n",
+      " 1   NPS                        901 non-null    int64\n",
+      " 2   Pre-Sales Information      901 non-null    int64\n",
+      " 3   Sales's Product Knowledge  901 non-null    int64\n",
+      " 4   Respon Time                901 non-null    int64\n",
+      " 5   Communication              901 non-null    int64\n",
+      "dtypes: int64(6)\n",
+      "memory usage: 42.4 KB\n"
+     ]
     }
    ],
    "source": [
-    "(contracts[\"user_price\"]*contracts[\"number_of_employee\"]).sum()"
+    "survey.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b55bdac0-55cc-4416-b190-0a76fe85a289",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa = stages.merge(funnel[funnel[\"reason\"]==\"price not fit\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "73ff158e-98ec-41cb-9965-07d94947447d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stage_id</th>\n",
-       "      <th>stage</th>\n",
-       "      <th>funnel_id</th>\n",
-       "      <th>leads_id</th>\n",
-       "      <th>TimeStamp</th>\n",
-       "      <th>reason</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>105</td>\n",
-       "      <td>discussion_success</td>\n",
-       "      <td>149</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2020-12-14 09:32:42.000000 UTC</td>\n",
-       "      <td>price not fit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>105</td>\n",
-       "      <td>discussion_success</td>\n",
-       "      <td>219</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2020-12-17 12:02:32.000000 UTC</td>\n",
-       "      <td>price not fit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>105</td>\n",
-       "      <td>discussion_success</td>\n",
-       "      <td>294</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2020-12-22 16:52:15.000000 UTC</td>\n",
-       "      <td>price not fit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>105</td>\n",
-       "      <td>discussion_success</td>\n",
-       "      <td>339</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2020-12-25 11:13:10.000000 UTC</td>\n",
-       "      <td>price not fit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>105</td>\n",
-       "      <td>discussion_success</td>\n",
-       "      <td>351</td>\n",
-       "      <td>71</td>\n",
-       "      <td>2020-12-28 10:25:35.000000 UTC</td>\n",
-       "      <td>price not fit</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   stage_id               stage  funnel_id  leads_id  \\\n",
-       "0       105  discussion_success        149        16   \n",
-       "1       105  discussion_success        219        13   \n",
-       "2       105  discussion_success        294        49   \n",
-       "3       105  discussion_success        339        64   \n",
-       "4       105  discussion_success        351        71   \n",
-       "\n",
-       "                        TimeStamp         reason  \n",
-       "0  2020-12-14 09:32:42.000000 UTC  price not fit  \n",
-       "1  2020-12-17 12:02:32.000000 UTC  price not fit  \n",
-       "2  2020-12-22 16:52:15.000000 UTC  price not fit  \n",
-       "3  2020-12-25 11:13:10.000000 UTC  price not fit  \n",
-       "4  2020-12-28 10:25:35.000000 UTC  price not fit  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aa.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d9282f60-ef57-4a39-b244-5a43b215214e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stage_id</th>\n",
-       "      <th>funnel_id</th>\n",
-       "      <th>leads_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>382.000</td>\n",
-       "      <td>382.000</td>\n",
-       "      <td>382.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>105.838</td>\n",
-       "      <td>8316.039</td>\n",
-       "      <td>1691.605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.829</td>\n",
-       "      <td>4845.182</td>\n",
-       "      <td>992.954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>105.000</td>\n",
-       "      <td>149.000</td>\n",
-       "      <td>13.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>105.000</td>\n",
-       "      <td>4048.500</td>\n",
-       "      <td>837.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>106.000</td>\n",
-       "      <td>8024.000</td>\n",
-       "      <td>1654.500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>107.000</td>\n",
-       "      <td>12448.250</td>\n",
-       "      <td>2558.750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>107.000</td>\n",
-       "      <td>16301.000</td>\n",
-       "      <td>3396.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       stage_id  funnel_id  leads_id\n",
-       "count   382.000    382.000   382.000\n",
-       "mean    105.838   8316.039  1691.605\n",
-       "std       0.829   4845.182   992.954\n",
-       "min     105.000    149.000    13.000\n",
-       "25%     105.000   4048.500   837.000\n",
-       "50%     106.000   8024.000  1654.500\n",
-       "75%     107.000  12448.250  2558.750\n",
-       "max     107.000  16301.000  3396.000"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aa.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f54da0f0-f9f0-4c18-b1f1-63d3369dc301",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
