--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "147d2242-0572-4a3e-9ef2-27f84e1064c1",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1754 entries, 0 to 1753\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
       " 0   contract_id         1754 non-null   int64  \n",
@@ -1300,51 +1300,29 @@
       " 2   date                1754 non-null   object \n",
       " 3   subscription_type   1754 non-null   object \n",
       " 4   number_of_employee  1754 non-null   int64  \n",
-      " 5   reten_flag_x        1754 non-null   int64  \n",
-      " 6   user_price          1754 non-null   int64  \n",
-      " 7   discount_type_code  442 non-null    object \n",
-      " 8   deal_won            442 non-null    object \n",
-      " 9   user_price_after    442 non-null    float64\n",
-      " 10  reten_flag_y        442 non-null    float64\n",
-      "dtypes: float64(2), int64(5), object(4)\n",
-      "memory usage: 164.4+ KB\n"
+      " 5   reten_flag          1754 non-null   int64  \n",
+      " 6   discount_type_code  442 non-null    object \n",
+      " 7   fixed_price         1754 non-null   float64\n",
+      "dtypes: float64(1), int64(4), object(3)\n",
+      "memory usage: 123.3+ KB\n"
      ]
     }
    ],
    "source": [
     "new_contracts = contracts.merge(discounts, on='contract_id', how='left')\n",
+    "new_contracts['user_price_after'] = new_contracts['user_price_after'].fillna(new_contracts['user_price'])\n",
+    "new_contracts.drop(['deal_won','user_price','reten_flag_y'], axis=1, inplace=True)\n",
+    "new_contracts.rename({'user_price_after' : 'fixed_price', 'reten_flag_x' : 'reten_flag'}, axis=1, inplace=True)\n",
     "new_contracts.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "502ef38a-e22a-455c-bfe6-f34cebcea63e",
+   "execution_count": null,
+   "id": "3f6d0032-0491-4ed0-8cfb-1a6ceacfd8da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 901 entries, 0 to 900\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column                     Non-Null Count  Dtype\n",
-      "---  ------                     --------------  -----\n",
-      " 0   id                         901 non-null    int64\n",
-      " 1   NPS                        901 non-null    int64\n",
-      " 2   Pre-Sales Information      901 non-null    int64\n",
-      " 3   Sales's Product Knowledge  901 non-null    int64\n",
-      " 4   Respon Time                901 non-null    int64\n",
-      " 5   Communication              901 non-null    int64\n",
-      "dtypes: int64(6)\n",
-      "memory usage: 42.4 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "survey.info()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
