--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -1841,9 +1841,11 @@
   {
    "cell_type": "markdown",
    "id": "0a116de7-35b9-44cf-aceb-dab9b28ab0e5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Exploratory Data Analysis"
+    "# Exploratory Data Analysis"
    ]
   },
   {
@@ -2047,7 +2049,7 @@
     "tags": []
    },
    "source": [
-    "## Clustering\n",
+    "# Clustering\n",
     "Using Kmeans method and only use `number_of_employee` and `total_visits` column to get lead's behavior so we can use it as actionable targeted marketing campaign"
    ]
   },
@@ -2324,7 +2326,7 @@
    "id": "f1e91e91-ef3c-4aed-8f47-6df97e43eca3",
    "metadata": {},
    "source": [
-    "### 3 Cluster Results"
+    "## 3 Cluster Results"
    ]
   },
   {
@@ -2761,9 +2763,11 @@
   {
    "cell_type": "markdown",
    "id": "a75f42ac-07eb-4073-b623-7362ac830195",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### 4 Cluster Results"
+    "## 4 Cluster Results"
    ]
   },
   {
@@ -3179,7 +3183,10 @@
   {
    "cell_type": "markdown",
    "id": "57f1d8ce-4bbd-4e9b-909b-e7268056a8d3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Clustering model using new contracts (deal won) data only"
    ]
@@ -3968,7 +3975,10 @@
   {
    "cell_type": "markdown",
    "id": "5c0ea41d-c4e5-439f-9208-c7cd5f63aa9c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Export the data for Visualization"
    ]
